@@ -37,6 +37,7 @@ alias tcSubmitTag   tcSubmitTag.py
 alias acmd          acmd.py
 alias diff-jobo-cfg diff-jobo-cfg.py
 alias filter-and-merge-d3pd filter-and-merge-d3pd.py
+alias diffTAGTree   diffTAGTree.py
 
 private
 
@@ -58,6 +59,7 @@ apply_pattern declare_scripts files="\
  diff-jobo-cfg.py \
  diffConfigs.py \
  diffPoolFiles.py \
+ diffTAGTree.py \
  dlldep.py \
  dso-stats.py \
  dump-athfile.py \
